# WSN-Clustering-Benchmark

./: .gitignore  LICENSE  PROPOSED_METHOD_SPEC.md  README.md  pyproject.toml  reproduce.py  requirements.txt  tmpclaude-7e54-cwd
config/: default.yaml
docs/: baseline_snapshot.md  fix_report.md
experiments/: analyze_results.py  auc_star_experiment.py  bandit_spatial_evidence.py  baseline_snapshot.py  check_ab.py  check_c_bandit.py  debug_auc_comparison.py  diagnose_backup_bug.py  fairness_lambda_ablation.py  fairness_share_mode_ablation.py  final_n100_experiment.py  generate_phi_c_line_graph.py  generate_rtd_winner_maps.py  generate_single_winner_map.py  make_paper_figures.py  phase_diagram.py  post_fix_comparison.py  post_fix_test.py  revision_artifacts.py  robustness_checks.py  run_ablation.py  run_ablation_1000nodes.py  run_ablation_full.py  run_ablation_harsh.py  run_comparison.py  run_comparison_1000nodes.py  test_bandit.py
results/: baseline_snapshot.md
results/data/ablation/: ablation_summary.csv
results/data/ablation_1000nodes/: ablation_1000nodes_summary.csv
results/data/ablation_full/: ablation_full_summary.csv
results/data/ablation_harsh/: ablation_harsh_summary.csv
results/data/comparison/: auction_alive_timeseries.csv  auction_energy_timeseries.csv  auction_summary.csv  (+13 more)
src/: __init__.py  simulation.py
src/algorithms/: __init__.py  auction.py  base.py  heed.py  leach.py
src/metrics/: __init__.py  collectors.py
src/models/: __init__.py  base_station.py  cluster.py  energy.py  network.py  node.py
src/utils/: __init__.py  visualization.py
